
    o read_matrix()/write_matrix(): the sep argument can now be NULL (no
      seperators.)

    o The Rdpack dependency has been dropped.

    o merge_motifs(): single-motif input now simply returns the motif instead
      of throwing an error.

    o view_motifs(..., dedup.names): Now TRUE by default. Furthermore, the
      make.unique() function is now used to deduplicate names.

CHANGES IN VERSION 1.8.5
------------------------

BUG FIXES

   o Found a typo in the consensus to PPM calculation for the DNA ambiguity
     letter Y which resulted in incorrect PPM values.

CHANGES IN VERSION 1.8.4
------------------------

BUG FIXES

   o Fixed incorrect handling of the -alph parameter in run_meme() (reported
      by @Irenexzwen).

CHANGES IN VERSION 1.8.3
------------------------

BUG FIXES

    o Fixed improper handling of MEME version string in read_meme().

CHANGES IN VERSION 1.8.2
------------------------

BUG FIXES

    o Increase compliance with MEME motif format: motif files with missing
      alphabets/strand/bkg are now allowed and  will be assumed to be
      DNA/+/uniform frequencies. A check for the MEME version is performed,
      though only a warning is given if not found.

    o Fixed typo in run_meme() missing dependency error message.

CHANGES IN VERSION 1.8.1
------------------------

BUG FIXES

    o Fixed error when scan_sequences() is used with both RC = TRUE and
      calc.pvals = TRUE.

    o Fixed motif.i column in scan_sequences() results not reporting correctly
      when RC = TRUE.

    o Fixed memory access bug in motif_pvalue() when k was set to a value
      resulting in three or more submotifs.

CHANGES IN VERSION 1.8.0
------------------------

NEW FEATURES

    o scan_sequences()/enrich_motifs() can now be used to scan/enrich for
      gapped motifs. A new section has been added to the SequenceSearches.Rmd
      vignette.

    o scan_sequences(..., use.gaps), enrich_motifs(..., use.gaps): ignore motif
      gap information.
